--- a/bulkloader/pom.xml
+++ b/bulkloader/pom.xml
@@ -13,29 +13,49 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
+  
+  <repositories>
+	<repository>
+    <id>GeoSolutions</id>
+    <url>http://maven.geo-solutions.it/</url>
+  	</repository>
+  </repositories> 
 
   <dependencies>
-<dependency>
-    <groupId>junit</groupId>
-    <artifactId>junit-dep</artifactId>
-    <version>4.11</version>
-</dependency>
-    <dependency>
-	<groupId>net.sf.opencsv</groupId>
-	<artifactId>opencsv</artifactId>
-	<version>2.0</version>
-</dependency>
-<dependency>
-    <groupId>log4j</groupId>
-    <artifactId>log4j</artifactId>
-    <version>1.2.17</version>
-</dependency>
-<dependency>
-	<groupId>org.apache.commons</groupId>
-	<artifactId>commons-io</artifactId>
-	<version>1.3.2</version>
-</dependency>
-
-		
+  	<dependency>
+	    <groupId>it.geosolutions</groupId>
+	    <artifactId>geoserver-manager</artifactId>
+	    <version>1.6-SNAPSHOT</version>
+	  	</dependency>
+	<dependency>
+	    <groupId>junit</groupId>
+	    <artifactId>junit-dep</artifactId>
+	    <version>4.11</version>
+	</dependency>
+	    <dependency>
+		<groupId>net.sf.opencsv</groupId>
+		<artifactId>opencsv</artifactId>
+		<version>2.0</version>
+	</dependency>
+	<dependency>
+	    <groupId>log4j</groupId>
+	    <artifactId>log4j</artifactId>
+	    <version>1.2.17</version>
+	</dependency>
+	<dependency>
+		<groupId>org.apache.commons</groupId>
+		<artifactId>commons-io</artifactId>
+		<version>1.3.2</version>
+	</dependency>
+	<dependency>
+	    <groupId>org.slf4j</groupId>
+	    <artifactId>slf4j-api</artifactId>
+	    <version>1.7.7</version>
+	</dependency>
+	<dependency>
+	    <groupId>org.slf4j</groupId>
+	    <artifactId>slf4j-simple</artifactId>
+	    <version>1.7.7</version>
+	</dependency>	
   </dependencies>
 </project>
