--- a/bulkloader/pom.xml
+++ b/bulkloader/pom.xml
@@ -28,11 +28,11 @@
 	    <version>1.7-SNAPSHOT</version>
 	  	</dependency>
 	<dependency>
-	    <groupId>junit</groupId>
-	    <artifactId>junit-dep</artifactId>
-	    <version>4.11</version>
+	  <groupId>junit</groupId>
+	  <artifactId>junit</artifactId>
+	  <version>4.12</version>
 	</dependency>
-	    <dependency>
+	<dependency>
 		<groupId>net.sf.opencsv</groupId>
 		<artifactId>opencsv</artifactId>
 		<version>2.0</version>
@@ -43,19 +43,14 @@
 	    <version>1.2.17</version>
 	</dependency>
 	<dependency>
-		<groupId>org.apache.commons</groupId>
-		<artifactId>commons-io</artifactId>
-		<version>1.3.2</version>
+	    <groupId>org.slf4j</groupId>
+	    <artifactId>slf4j-simple</artifactId>
+	    <version>1.7.7</version>
 	</dependency>
 	<dependency>
 	    <groupId>org.slf4j</groupId>
 	    <artifactId>slf4j-api</artifactId>
 	    <version>1.7.7</version>
 	</dependency>
-	<dependency>
-	    <groupId>org.slf4j</groupId>
-	    <artifactId>slf4j-simple</artifactId>
-	    <version>1.7.7</version>
-	</dependency>	
   </dependencies>
 </project>
