--- a/bulkloader/pom.xml
+++ b/bulkloader/pom.xml
@@ -69,7 +69,14 @@
 			<artifactId>slf4j-api</artifactId>
 			<version>1.7.7</version>
 		</dependency>
+		<dependency>
+		<groupId>commons-validator</groupId>
+		<artifactId>commons-validator</artifactId>
+		<version>1.4.0</version>
+	</dependency>
 	</dependencies>
+
+
 
 	<build>
 		<!-- Maven plugin to bundle all needed libraries in the jar, and properly 
@@ -108,7 +115,7 @@
 						<artifactId>mojo-executor</artifactId>
 						<version>2.2.0</version>
 					</dependency>
-				</dependencies> 
+				</dependencies>
 			</plugin>
 		</plugins>
 	</build>
